fix(history-schedule-page): add horizontal scroll bar (#407)
When user navigates to history single page and there are
more records to display, the page is not scrollable.

This commit ensures that the page is scrollable.
It also ensure that horizontal scroll-bar is visible
to the user immediately he/she views a schedule page
that has more records to display.

[Fixes #155766553]

--- a/src/app/modules/request-pool/history-page/history-page.component.scss
+++ b/src/app/modules/request-pool/history-page/history-page.component.scss
@@ -231,3 +231,18 @@ a {
   display: inline-block;
   margin-right: 30px;
 }
+
+.request-schedule-wrapper {
+	width: calc(100vw - 12%);
+	height: 100%;
+	overflow-x: scroll;
+}
+
+.request-schedule-wrapper::-webkit-scrollbar {
+	height: 8px;
+}
+
+.request-schedule-wrapper::-webkit-scrollbar-thumb {
+	border-radius: 5px;
+	background: $scroll-bar-color;
+}
