--- a/src/app/modules/request-pool/request-schedule-page/request-schedule-page.component.scss
+++ b/src/app/modules/request-pool/request-schedule-page/request-schedule-page.component.scss
@@ -6,6 +6,5 @@
   display: block;
   direction: ltr;
   height: calc(100vh - 119px);
-  overflow: hidden;
 }
 
